// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render STRING_DISPLAY correctly with default value to empty 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "STRING_DISPLAY",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <DisplayString
    placeholder="String only"
    value=""
  >
    <styled.div>
      <div
        className="lkjDmd"
      >
        <styled.textarea
          disabled={true}
          kind="primary"
          placeholder="String only"
          value=""
        >
          <textarea
            className="haOaRY"
            disabled={true}
            kind="primary"
            placeholder="String only"
            value=""
          />
        </styled.textarea>
      </div>
    </styled.div>
  </DisplayString>
</DataChannelAdapter>
`;

exports[`should render STRING_DISPLAY correctly with empty string 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "STRING_DISPLAY",
      "values": Object {
        "value": "",
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayString
    placeholder="String only"
    value=""
  >
    <styled.div>
      <div
        className="lkjDmd"
      >
        <styled.textarea
          disabled={true}
          kind="primary"
          placeholder="String only"
          value=""
        >
          <textarea
            className="haOaRY"
            disabled={true}
            kind="primary"
            placeholder="String only"
            value=""
          />
        </styled.textarea>
      </div>
    </styled.div>
  </DisplayString>
</DataChannelAdapter>
`;

exports[`should render STRING_DISPLAY correctly with value 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "STRING_DISPLAY",
      "values": Object {
        "value": "michaelhsu",
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayString
    placeholder="String only"
    value="michaelhsu"
  >
    <styled.div>
      <div
        className="lkjDmd"
      >
        <styled.textarea
          disabled={true}
          kind="primary"
          placeholder="String only"
          value="michaelhsu"
        >
          <textarea
            className="haOaRY"
            disabled={true}
            kind="primary"
            placeholder="String only"
            value="michaelhsu"
          />
        </styled.textarea>
      </div>
    </styled.div>
  </DisplayString>
</DataChannelAdapter>
`;
